# da-project

./: .gitignore  Group_Intro2DA.ipynb  Group_Intro2DA_28.10.2025.html  README.md  all_stations_regio_ice.json  all_stations_regio_ice_1_2.json  app.py  betweenness_analyzer.py  data_cleaning.py  db_connector.py  main.py  pyproject.toml  train_station_access.geojson
datasets/: ev_registrations.json  ev_registrations_cleaned.csv  statistic_id1166572_new-electric-car-registrations-in-germany-2003-2024.xlsx  statistic_id1220664_absatz-von-elektroautos-weltweit-nach-laendern-2024.xlsx  statistic_id1241597_pkw-neuzulassungen-mit-plug-in-hybrid-antrieb-in-deutschland-bis-september-2025.xlsx  statistic_id1300745_number-of-new-public-charging-stations-germany-2014-2025.xlsx  ten-t.geojson
pages/: International_Registrations.py
