[project]
name = "da-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "pydeck>=0.9.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.2",
    "watchdog>=6.0.0",
]
